# imapy

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGES  MANIFEST.in  NOTES.rst  README.md  README.rst  TODO.rst  changelog.md  pyproject.toml  scripts.py  setup.py  tests.py  tox.ini
.github/workflows/: python-package.yml
examples/: append_email.py  auto_reply.py  basic.py  email_operations.py  email_save_attachment.py  folder_operations.py  get_email_uids.py  searching_emails.py
imapy/: __init__.py  connector.py  email_message.py  exceptions.py  imap.py  mail_folder.py  query_builder.py  structures.py  utils.py
imapy/tests/: test_imap.py  test_parsing.py  test_querybuilder.py
test_emails/: 1.msg  2.msg  3.msg  4.msg  5.msg  6.msg  7.msg  8.msg  9.msg
tests/: test_email_message.py  test_imap.py  test_mail_folders.py  test_parsing.py  test_querybuilder.py  test_utils.py  test_withconnect.py
