[tool.poetry]
name = "imapy"
version = "1.2.0"
description = "Imapy: Imap for Humans"
authors = ["Vladimir Goncharov <vladimarius@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
